--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This is my very first project in Python.
+
 With this project I want to evaluate the impact of homeless on businesses' relocation decisions in San Francisco. 
 I am cleaning and manipulating the data, trying to understand the data I need.
 I found two datasets: one includes business in SF with start and end date and the other includes reports (311 cases). 
